maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:68: error: not found: value posSOrtie
  setIndication(posSortie(0), posSOrtie(1) + 1, 1)
                              ^